# legal-mcp

./: .gitignore  LICENSE  README.md  README_EN.md  config.example.yaml  install.sh  pyproject.toml  run_server.py
es_data/config/: elasticsearch.yml
js_legal/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
js_legal/src/: config.ts  index.ts
legal_mcp/: __init__.py  mcp_config.py  mcp_runner.py  mcp_server.py  mcp_util.py
pytests/: README.md  conftest.py  conftest_loguru.py  test_cluster.py  test_config.py  test_loguru_demo.py  test_retrieval.py  test_search.py
script/: data_download.sh  docker-compose.yml  elasticsearch_index_mapping.json  es_config.py  es_import.py  legal_doc  schema_extractor.py  schema_node.py  setup_elasticsearch.sh  xml_to_json.py
