[project]
name = "legal-mcp"
version = "0.1.0"
description = "Legal Document Explorer MCP Server - Search and retrieve Japanese legal documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
authors = [
    {name = "lijunjie2232", email = "2533584225@qq.com"},
]
maintainers = [
    {name = "lijunjie2232", email = "2533584225@qq.com"},
]
keywords = ["mcp", "elasticsearch", "legal", "japanese-law", "document-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "elasticsearch>=9.3.0",
    "loguru>=0.7.3",
    "mcp[cli]>=1.27.0",
    "networkx>=3.6.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.67.3",
]

[project.urls]
Homepage = "https://github.com/lijunjie2232/legal-mcp"
Repository = "https://github.com/lijunjie2232/legal-mcp.git"
Issues = "https://github.com/lijunjie2232/legal-mcp/issues"

[project.scripts]
legal-mcp = "legal_mcp.mcp_runner:main"

[tool.setuptools.packages.find]
include = ["legal_mcp*"]
exclude = ["data*", "kibana*", "script*", "test_json*", "pytests*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
testpaths = [
    "pytests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
asyncio_mode = "auto"
